[gd_scene load_steps=5 format=2]

[ext_resource path="res://client/menu/title/title_screen.gd" type="Script" id=1]
[ext_resource path="res://client/menu/title/flappy_race_logo.png" type="Texture" id=2]
[ext_resource path="res://client/fonts/DelaGothicOne-24.tres" type="DynamicFont" id=5]
[ext_resource path="res://client/menu/menu_button.tscn" type="PackedScene" id=10]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PlayerContainer" type="CanvasLayer" parent="."]
layer = -1

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
anchor_right = 1.0
margin_bottom = 75.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Buttons" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -190.0
margin_right = 200.0
margin_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SingleplayerButton" parent="Menu/Buttons" instance=ExtResource( 10 )]
margin_right = 400.0
grow_horizontal = 2
label = "Singleplayer"
alignment = 1

[node name="MultiplayerButton" parent="Menu/Buttons" instance=ExtResource( 10 )]
margin_top = 100.0
margin_right = 400.0
margin_bottom = 180.0
label = "Multiplayer"
alignment = 1

[node name="OptionsButton" parent="Menu/Buttons" instance=ExtResource( 10 )]
margin_top = 200.0
margin_right = 400.0
margin_bottom = 280.0
label = "Options"
alignment = 1

[node name="QuitButton" parent="Menu/Buttons" instance=ExtResource( 10 )]
margin_top = 300.0
margin_right = 400.0
margin_bottom = 380.0
label = "Quit"
alignment = 1

[node name="DevLabel" type="Label" parent="Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -187.0
margin_top = -35.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
text = "Jibby Games"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="Menu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -35.0
margin_right = 140.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "vX.Y.Z"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/Buttons/SingleplayerButton" to="." method="_on_SingleplayerButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
